--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "chai": "^4.3.0",
     "chai-bignumber": "^3.0.0",
     "locklift": "^1.4.5",
-    "tsolidity-docgen": "../tsolidity-docgen",
+    "tsolidity-docgen-dev": "^0.66.0-beta.1",
     "solidity-ast": "^0.4.40",
     "lodash.startcase": "^4.4.0"
   }
